--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^3.4.17"
   }
 }
